# awatch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  alerts.md  categories.md  configuration.md  consumers.md  dashboard.md  installation.md  privacy.md  publishing.md  usage.md
examples/: basic_app.py  with_categories.py  with_triggers.py
src/awatch/: __init__.py
src/awatch/analytics/: __init__.py  consumer_rules.py  consumers.py  errors.py  payloads.py
src/awatch/analytics/categories/: __init__.py  engine.py  loaders.py
src/awatch/api/: __init__.py  auth.py  router.py  schemas.py
src/awatch/api/routes/: categories.py  consumers.py  metrics.py  requests.py
src/awatch/capture/: __init__.py  dependencies.py  logging_bridge.py  middleware.py
src/awatch/core/: __init__.py  app.py  config.py  constants.py  context.py  ui_config.py
src/awatch/dashboard/: index.html
src/awatch/health/: __init__.py  uptime.py
src/awatch/privacy/: __init__.py  exclude.py  mask.py  scrubbing_report.py
src/awatch/storage/: __init__.py  base.py  queue.py  sqlite.py
src/awatch/triggers/: __init__.py  conditions.py  engine.py  events.py  rules.py
src/awatch/triggers/actions/: __init__.py  discord.py  email.py  log.py  slack.py  webhook.py
src/monitorit/: __init__.py
src/monitorit/awatch/: __init__.py
src/monitorit/awatch/analytics/: __init__.py  aggregator.py  consumers.py  openapi.py  validation.py
src/monitorit/awatch/api/: __init__.py  router.py
tests/integration/: test_apitally_apis.py  test_consumer_auto_tag.py  test_dashboard_api.py  test_middleware.py  test_multi_worker.py  test_ui_config.py
tests/unit/analytics/: test_categories.py  test_consumer_rules.py  test_validation.py
tests/unit/core/: test_ui_config_openapi.py
tests/unit/privacy/: test_exclude.py  test_mask.py
tests/unit/storage/: test_sampling.py  test_sqlite.py
tests/unit/triggers/: test_discord.py  test_triggers.py
(+48 files in other folders)
